# TimelessJourneys

./: .gitignore  AssetManager.cpp  AssetManager.h  AssetManager.hpp  CMakeLists.txt  CMakeLists.txt.user.06cc065  CMakeLists.txt.user.88c0a59  CMakeLists.txt.user.8bbb4b9  CMakeLists.txt.user.9fcc3d8  Collision.cpp  Collision.h  Collision.hpp  README.md  TextureManager.cpp  TextureManager.h  TextureManager.hpp  Vector2D.cpp  Vector2D.hpp  boots.cpp  boots.h  chestScreen.cpp  chestScreen.h  chestScreen.hpp  desktop.ini  game.cpp  game.h  game.hpp  game_over.cpp  game_over.h  gameobject.cpp  gameobject.h  gameobject.hpp  ingame_menu.cpp  ingame_menu.hpp  inventory.cpp  inventory.h  inventory.hpp  inventoryscreen.cpp  inventoryscreen.h  items.cpp  (+21 more)
ECS/: Animation.cpp  Animation.h  Animation.hpp  ColliderComponent.cpp  ColliderComponent.h  ColliderComponent.hpp  Components.h  Components.hpp  ECS.cpp  ECS.h  ECS.hpp  EnemyMovement.cpp  EnemyMovement.h  EnemyMovement.hpp  InteractComponent.hpp  KeyboardController.cpp  KeyboardController.h  KeyboardController.hpp  NPCBehavior.cpp  NPCBehavior.h  NPCBehavior.hpp  ProjectileComponent.cpp  ProjectileComponent.h  ProjectileComponent.hpp  SpawnerComponent.cpp  SpawnerComponent.h  SpawnerComponent.hpp  SpriteComponent.cpp  SpriteComponent.h  SpriteComponent.hpp  Stats.cpp  Stats.h  Stats.hpp  TileComponent.h  TileComponent.hpp  TransformComponent.cpp  TransformComponent.h  TransformComponent.hpp  UILabel.h  UILabel.hpp  (+21 more)
Individual reports/: Adan_FHIMA_README.md  Alessandro_Sayad_README.md  Amine_Zghal_README.md  Chedi Mnif  Dan_SUISSA_README.txt  Gabin_Lassus_README.md  Gabriel_Faes_README.md  Hadrien_DEO_README.md  Hiba_Lina_Ben_khaddah_README.md  Joaquin_Sanchez_README.md  Karel Moryoussef  Karel_Moryoussef_README.MD  Lila_Schoen_README.md  Martin-Delos_report  Maurice_Constantin_Matar_README.md  Robert_Debbas  Yanis_Zaamoun_README.md  martin_delos_report_README
assets/: World_1.json  World_1_setup.json  enemiesLvl3.json  items - Copy.json  items - Copy.json.autosave  items.json  items_Lvl1.json  items_Lvl3.json  map - Copy.map  map.map
assets/Canon/: Canon.psd
assets/map/: Map3.map  map.map
